--- a/module-1/feature-engineering.ipynb
+++ b/module-1/feature-engineering.ipynb
@@ -187,6 +187,74 @@
     }
    ],
    "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-28T20:23:09.309855Z",
+     "start_time": "2025-08-28T20:23:09.248772Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df_original.info()",
+   "id": "de8164893a545281",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 10000 entries, 0 to 9999\n",
+      "Data columns (total 14 columns):\n",
+      " #   Column           Non-Null Count  Dtype  \n",
+      "---  ------           --------------  -----  \n",
+      " 0   RowNumber        10000 non-null  int64  \n",
+      " 1   CustomerId       10000 non-null  int64  \n",
+      " 2   Surname          10000 non-null  object \n",
+      " 3   CreditScore      10000 non-null  int64  \n",
+      " 4   Geography        10000 non-null  object \n",
+      " 5   Gender           10000 non-null  object \n",
+      " 6   Age              10000 non-null  int64  \n",
+      " 7   Tenure           10000 non-null  int64  \n",
+      " 8   Balance          10000 non-null  float64\n",
+      " 9   NumOfProducts    10000 non-null  int64  \n",
+      " 10  HasCrCard        10000 non-null  int64  \n",
+      " 11  IsActiveMember   10000 non-null  int64  \n",
+      " 12  EstimatedSalary  10000 non-null  float64\n",
+      " 13  Exited           10000 non-null  int64  \n",
+      "dtypes: float64(2), int64(9), object(3)\n",
+      "memory usage: 1.1+ MB\n"
+     ]
+    }
+   ],
+   "execution_count": 5
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-28T20:24:21.536694Z",
+     "start_time": "2025-08-28T20:24:21.522006Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df_original[\"Exited\"].value_counts()",
+   "id": "32516c046e5a2e92",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Exited\n",
+       "0    7963\n",
+       "1    2037\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 6
   }
  ],
  "metadata": {
